--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release Android package to Maven Central Repository
 on:
   release:
-    types: [ created ]
+    types: [ published ]
 jobs:
   publish:
     runs-on: ubuntu-latest
