--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,19 @@
-name: Run unit tests
+name: Run tests
+
 on: [push]
+
 jobs:
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: ['8.0', '11.0', '13.0']
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Java ${{ matrix.java }}
+      - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          java-version: '11'
           distribution: 'adopt'
-      - name: Test
-        run: |
-          mvn package test
-        env:
-          INTEGRATION_TESTS_API_TOKEN: ${{ secrets.INTEGRATION_TESTS_API_TOKEN }}
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Run unit test
+        run: ./gradlew test
+
