--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <version>1.3.2</version>
     <url>https://github.com/apivideo/api.video-android-uploader</url>
-    <description>api.video Android API video uploader</description>
+    <description>The official Android api.video uploader</description>
     <scm>
         <connection>scm:git:git://github.com/apivideo/api.video-android-uploader.git</connection>
         <developerConnection>scm:git:ssh://github.com:apivideo/api.video-android-uploader.git</developerConnection>
