--- a/.github/workflows/create-documentation-pr.yml
+++ b/.github/workflows/create-documentation-pr.yml
@@ -21,7 +21,7 @@ jobs:
         with: 
           source-file-path: "README.md"
           destination-repository: apivideo/api.video-documentation
-          destination-path: sdks/vod
-          destination-filename: apivideo-android-uploader.md
+          destination-path: sdks/api-clients
+          destination-filename: apivideo-android-uploader-client.md
           pat: "${{ secrets.PAT }}"
           
