chore(java): upgrade to gradle 8.2.2

--- a/examples/service/build.gradle
+++ b/examples/service/build.gradle
@@ -23,28 +23,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     packagingOptions {
         resources {
             excludes += ['META-INF/DEPENDENCIES']
         }
     }
+
     buildFeatures {
         viewBinding true
     }
+
+    namespace "video.api.uploader.service.example"
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 
     implementation project(path: ':')
 
